--- a/src/components/Links/index.scss
+++ b/src/components/Links/index.scss
@@ -1,4 +1,7 @@
-.container {
+$primary-color: #1c1c1c;
+$secondary-color: #e50505;
+
+.link-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,9 +16,22 @@
     flex-wrap: wrap;
   }
   .profile_img {
-    width: 200;
-    height: 200px;
+    width: 130;
+    height: 130px;
     border-radius: 100px;
     margin: 30px;
+  }
+
+  .nickname {
+    font-weight: 300;
+    font-size: 46px;
+    line-height: 50px;
+    font-family: sans-serif;
+    &.primary-color {
+      color: $primary-color;
+    }
+    &.secondary-color {
+      color: $secondary-color;
+    }
   }
 }
