--- a/src/layout/Body/index.scss
+++ b/src/layout/Body/index.scss
@@ -1,5 +1,5 @@
+$header-height: 100px;
 .body-container {
-  margin-top: 15px;
+  margin-top: $header-height;
   height: 100%;
-  // background-color: #efe7dc;
 }
