--- a/src/pages/Info/components/InfoArticle/index.scss
+++ b/src/pages/Info/components/InfoArticle/index.scss
@@ -1,7 +1,11 @@
 $font-size: 20px;
+$leftbar-max-width: 250px;
 
 .article-container {
-  width: 70%;
+  margin-left: $leftbar-max-width;
+  margin-right: $leftbar-max-width;
+  max-width: 1000px;
+  height: 100%;
 
   header {
     // font-size: 45px;
