--- a/src/pages/Info/components/LeftBar/index.scss
+++ b/src/pages/Info/components/LeftBar/index.scss
@@ -2,6 +2,7 @@ $max-width: 250;
 
 .leftbar-container {
   display: flex;
+  position: fixed;
   flex-direction: column;
   background: #f5f5f5;
   max-width: #{$max-width}px;
