--- a/src/pages/Info/components/InfoArticle/index.scss
+++ b/src/pages/Info/components/InfoArticle/index.scss
@@ -8,14 +8,13 @@ $leftbar-max-width: 250px;
   height: 100%;
 
   header {
-    // font-size: 45px;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 400;
     letter-spacing: -1px;
     line-height: 1.1;
     margin-bottom: 3%;
   }
-  p {
+  .about-paragraph {
     font-size: $font-size;
     line-height: 1.5;
   }
@@ -34,6 +33,25 @@ $leftbar-max-width: 250px;
       flex-direction: row;
       justify-content: center;
       align-items: start;
+    }
+  }
+
+  .exp-section {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    line-height: 0.5;
+    // font-family: sans-serif !important;
+    .period-paragraph {
+      color: #aaaaaa;
+    }
+    .detail-paragraph {
+      color: #666666;
+    }
+    i {
+      font-style: normal;
+    }
+    a {
+      color: red;
     }
   }
 }
