--- a/src/components/LinkItem/index.scss
+++ b/src/components/LinkItem/index.scss
@@ -26,9 +26,10 @@ $secondaryColor: #e50505;
     align-items: center;
     width: 100%;
     height: 100%;
-    font-family: sans-serif;
+    font-family: Leon Sans;
     font-weight: 500;
     font-size: 14px;
+    letter-spacing: 0.5px;
     color: white;
     text-decoration: none;
 
