--- a/src/layout/Header/components/MenuItem/index.scss
+++ b/src/layout/Header/components/MenuItem/index.scss
@@ -3,8 +3,10 @@ $hovered: #e50505;
 
 .menu-item {
   margin: 10px;
-  font-size: 15px;
-  font-family: sans-serif;
+  font-size: 13px;
+  font-family: Leon Sans sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
   padding: 5px;
   cursor: pointer;
   align-items: center;
