--- a/src/pages/Projects/index.scss
+++ b/src/pages/Projects/index.scss
@@ -5,7 +5,13 @@
   justify-content: center;
 
   h1 {
-    font-family: sans-serif;
+    font-family:
+      Leon Sans,
+      sans-serif;
+    font-weight: 300;
+    font-size: 46px;
+    color: #000;
+    margin-top: 80px;
   }
 
   ul {
