--- a/src/pages/Info/components/InfoArticle/index.scss
+++ b/src/pages/Info/components/InfoArticle/index.scss
@@ -6,6 +6,7 @@ $leftbar-max-width: 250px;
   margin-right: $leftbar-max-width;
   max-width: 1000px;
   height: 100%;
+  color: #404040;
 
   header {
     font-size: 60px;
@@ -32,6 +33,7 @@ $leftbar-max-width: 250px;
     height: auto;
     max-width: 300px;
     min-width: 200px;
+    box-shadow: 0px 4px 8px #404040;
   }
   .article-container-inside {
     margin-left: 40px;
