--- a/src/pages/Info/components/LeftBar/index.scss
+++ b/src/pages/Info/components/LeftBar/index.scss
@@ -7,6 +7,7 @@ $max-width: 250;
   background: #f5f5f5;
   max-width: #{$max-width}px;
   height: 100%;
+  color: #404040;
   .profile-wb {
     max-width: #{$max-width - 50}px;
   }
