feat: Add profile card & change fonts

--- a/src/components/LinkItem/index.scss
+++ b/src/components/LinkItem/index.scss
@@ -26,7 +26,7 @@ $secondaryColor: #e50505;
     align-items: center;
     width: 100%;
     height: 100%;
-    font-family: Leon Sans;
+    font-family: Roboto Condensed;
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.5px;
