--- a/src/layout/Header/components/MenuItem/index.scss
+++ b/src/layout/Header/components/MenuItem/index.scss
@@ -4,7 +4,7 @@ $hovered: #e50505;
 .menu-item {
   margin: 10px;
   font-size: 13px;
-  font-family: Leon Sans sans-serif;
+  font-family: Roboto Condensed;
   font-weight: 700;
   letter-spacing: 1px;
   padding: 5px;
