--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -1,5 +1,6 @@
 .App {
-  //   display: block;
-  //   justify-content: center;
-  //   align-items: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
