--- a/src/layout/Body/index.scss
+++ b/src/layout/Body/index.scss
@@ -1,5 +1,7 @@
 $header-height: 70px;
 .body-container {
+  display: flex;
+  justify-content: center;
   margin-top: $header-height;
   height: 100%;
 }
