--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -1,5 +1,6 @@
-.App {
+.main-container {
   display: flex;
+  margin: 0% 30%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
