--- a/src/pages/Main/components/ProfileCard/index.scss
+++ b/src/pages/Main/components/ProfileCard/index.scss
@@ -1,8 +1,6 @@
 .profile_container {
   margin-top: 100px;
-  max-width: 550px;
-  min-width: 480px;
-
+  width: 100%;
   .greeting {
     text-align: center;
     background: #f5f5f5;
