--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,5 +1,6 @@
 .layout-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  justify-content: space-between;
+  // height: 100%;
 }
